--- a/style.css
+++ b/style.css
@@ -144,6 +144,14 @@ h3 a{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1.2rem;
 }
+
+.project-btn-container{
+  margin: 5px;
+  float: right;
+  width: 150px;
+  display: flex;
+  justify-content: space-around;
+}
 /* css for portfolio-page */
 
 .my-work-section {
