--- a/style.css
+++ b/style.css
@@ -85,33 +85,37 @@ p {
   margin: 2rem;
   width: 650px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: lighter;
   font-size: 1.5rem;
   line-height: 42px;
-  color: rgb(68, 68, 68);
+  color: #636262;
     padding:0 3rem;
 }
 .img-heading {
   display: block;
   margin: auto;
+  padding-left: 7em;
+  padding-bottom: 1em;
 }
 .about-me-links {
   
   margin-top: 3.5rem;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 0 4rem;
+  justify-content: flex-end;
+  /* align-items: right; */
+  /* padding: 0 1rem; */
 }
 .about-me-btn{
+  height: 45%;
   transition: transform .3s;
 }
 .about-me-btn:hover{
   
   transform: scale(1.1);
 }
-
+a {
+  width: 11rem;
+}
 
 /* css for contact-page */
 .contact-section {
